# bincode_aes

./: .gitignore  Cargo.toml  README.md
examples/: serde_crypt.rs  testcrypt.rs
src/: lib.rs
